--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,25 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 3</title>
+    <title>Form</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
-    />
+    <main class="container">
+      <form class="feedback-form" autocomplete="off">
+        <label for="email">E-mail</label>
+        <input id="email" type="email" name="email" autofocus />
 
-    <main>
-      <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
-        </h1>
-        <load src="./partials/back-link.html" />
-      </div>
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="8"></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
     </main>
 
-    <load src="./partials/footer.html" />
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
